--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,9 +3,7 @@ backend:
   repo: johnmoxon/johnmoxon.github.io
   branch: stage 
   site_domain: www.jmoxon.net
-
 media_folder: "assets/uploads"
-
 collections:
   - name: "Posts" # Used in routes, e.g. /admin/collections/blog
     label: "Posts" # Used in the UI
@@ -48,12 +46,11 @@ collections:
       - {label: "Image", name: "image", widget: "image"}
       - {label: "Summary", name: "summary", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
-  
   - name: "Pages"
     label: "Pages"
     folder: "_pages/"
     create: true # Allow users to create
-    slug: {{slug}}
+    slug: "{{slug}}"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string"}
@@ -65,20 +62,21 @@ collections:
         time_format: "HH:mm" # e.g. 21:07
         format: "LLL"
         picker_utc: false
+      - {label: "Permalink", name: "permalink", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "config"
-  label: "Config"
-  editor:
-    preview: false
-  files:
-    - label: "Navigation"
-      name: "navigation"
-      file: "_data/navigation.yml"
-      fields:
-        - label: "Navigation Items"
-          name: "items"
-          widget: "list"
-          fields:
-            - {label: Name, name: name, widget: string}
-            - {label: Link, name: link, widget: string}
-    
+    label: "Config"
+    editor:
+      preview: false
+    files:
+      - label: "Navigation"
+        name: "navigation"
+        file: "_data/navigation.yml"
+        fields:
+          - label: "Navigation Items"
+            name: "items"
+            widget: "list"
+            fields:
+              - {label: Name, name: name, widget: string}
+              - {label: Link, name: link, widget: string}
+      
