--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,8 +2,10 @@ backend:
   name: github
   repo: johnmoxon/johnmoxon.github.io
   branch: stage 
-  site_domain: www.jmoxon.net
+  site_domain: stage.jmoxon.net
+
 media_folder: "assets/uploads"
+
 collections:
   - name: "Posts" # Used in routes, e.g. /admin/collections/blog
     label: "Posts" # Used in the UI
@@ -24,6 +26,7 @@ collections:
         search_fields: [name],
         value_field: 'name',
       }
+
   - name: "Authors"
     label: "Authors"
     folder: "_authors/"
@@ -46,6 +49,7 @@ collections:
       - {label: "Image", name: "image", widget: "image"}
       - {label: "Summary", name: "summary", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
+
   - name: "Pages"
     label: "Pages"
     folder: "_pages/"
@@ -64,6 +68,7 @@ collections:
         picker_utc: false
       - {label: "Permalink", name: "permalink", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+
   - name: "config"
     label: "Config"
     editor:
