--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,9 +3,11 @@ backend:
   repo: johnmoxon/johnmoxon.github.io
   branch: stage 
   site_domain: www.jmoxon.net
+  site_url: https://stage.jmoxon.net
+  display_url: https://stage.jmoxon.net
 
 media_folder: "assets/uploads"
-
+publish_mode: editorial_workflow
 collections:
 
   - name: "Posts" # Used in routes, e.g. /admin/collections/blog
@@ -80,7 +82,7 @@ collections:
     label: "Pages"
     folder: "_pages/"
     create: true # Allow users to create
-    slug: {{slug}}
+    slug: "{{slug}}"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string"}
