--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,9 +43,10 @@ collections:
           - {label: "Author", name: "author", widget: "string"}
           - {label: "Source  site", name: "source", widget: "string"}
           - {label: "Source  URL", name: "url", widget: "string"}
-      - label: 'Tags' 
-        name: 'tags' 
-        widget: 'list'
+      - label: "Tags"
+        name: "tags"
+        widget: "list"
+        allow_add: true
         label_singular: 'Add tag'
         min: 1
       - {label: 'Comments allowed', name: 'comments', widget: 'boolean', default: true}
