--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 _build/assets/img/** filter=lfs diff=lfs merge=lfs -text
 src/assets/img/** filter=lfs diff=lfs merge=lfs -text
+src/assets/uploads/** filter=lfs diff=lfs merge=lfs -text
