--- a/admin/config.yml
+++ b/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - {label: 'Layout', name: 'layout', widget: 'hidden', default: 'post'}
       - {label: 'Title', name: 'title', widget: 'string'}
       - {label: 'Subtitle', name: 'subtitle', widget: 'string', required: false}
-      - {label: 'Published', name: published, widget}
+      - {label: 'Published', name: published, widget: 'boolean', default: true }
       - label: 'Category'
         name: 'category'
         widget: 'select'
