test CMS file relation widget

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -27,9 +27,9 @@ collections:
         name: 'category'
         widget: 'relation'
         file: 'config'
-        display_fields: ["config.categories.items.category"]
-        search_fields: ["config.categories.items.category"]
-        value_field: "config.categories.items.category"
+        display_fields: ["config.*.category"]
+        search_fields: ["config.*.category"]
+        value_field: "config.*.category"
       # - label: 'Category'
       #   name: 'category'
       #   widget: 'select'
